<!--
  ~ Copyright (C) 2017 Raul Hernandez Lopez @raulh82vlc
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Simple calculator!</string>
    <string name="loading">reading data…</string>
    <string name="seven_char">7</string>
    <string name="eight_char">8</string>
    <string name="nine_char">9</string>
    <string name="four_char">4</string>
    <string name="five_char">5</string>
    <string name="six_char">6</string>
    <string name="one_char">1</string>
    <string name="two_char">2</string>
    <string name="three_char">3</string>
    <string name="dot_char">.</string>
    <string name="zero_char">0</string>
    <string name="plus_char">+</string>
    <string name="minus_char">-</string>
    <string name="equals_char">=</string>
    <string name="remove_char"><![CDATA[<]]></string>
    <string name="computing_result">Screen processed, now computing operations</string>
</resources>
