<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2017 Raul Hernandez Lopez @raulh82vlc
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:columnCount="@integer/column_count"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:orientation="horizontal" >

    <Button
        android:id="@+id/seven_btn"
        android:text="@string/seven_char" />

    <Button
        android:id="@+id/eight_btn"
        android:text="@string/eight_char" />

    <Button
        android:id="@+id/nine_btn"
        android:text="@string/nine_char" />

    <Button
        android:id="@+id/four_btn"
        android:text="@string/four_char" />

    <Button
        android:id="@+id/five_btn"
        android:text="@string/five_char"/>

    <Button
        android:id="@+id/six_btn"
        android:text="@string/six_char" />

    <Button
        android:id="@+id/one_btn"
        android:text="@string/one_char" />

    <Button
        android:id="@+id/two_btn"
        android:text="@string/two_char" />

    <Button
        android:id="@+id/three_btn"
        android:text="@string/three_char" />

    <Button
        android:id="@+id/dot_btn"
        android:text="@string/dot_char" />

    <Button
        android:id="@+id/zero_btn"
        android:text="@string/zero_char"/>

    <Button
        android:id="@+id/remove_btn"
        android:text="@string/remove_char" />

    <Button
        android:id="@+id/plus_btn"
        android:layout_gravity="start"
        android:layout_columnSpan="1"
        android:text="@string/plus_char" />

    <Button
        android:id="@+id/minus_btn"
        android:text="@string/minus_char"
        android:layout_columnSpan="2"
        android:layout_gravity="end"/>

    <Button
        android:id="@+id/equals_btn"
        android:layout_columnSpan="3"
        android:layout_gravity="fill"
        android:text="@string/equals_char" />

</GridLayout>